# fulcrademo

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
streamlit_demos/: login.py  utils.py
streamlit_demos/.streamlit/: config.toml
streamlit_demos/data/: locations.json  network.json
streamlit_demos/pages/: calendars.py  fulcra_insights.py  hrv_insights.py  llm.py  logout.py  sleep_insights.py  walk_insights.py
streamlit_demos/utils/: menu.py  utils.py
